--- a/platformio.ini
+++ b/platformio.ini
@@ -66,6 +66,9 @@ lib_deps =
     Arduino_JSON@0.2.0
     ${env.lib_deps}
     ${m5unified.lib_deps}
+    M5Stack-SD-Updater
+    https://github.com/tobozo/ESP32-targz
+
 extra_scripts = post:generate_user_custom.py
 
 [esp32s3]
