--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.mcu = esp32
 board_build.flash_mode = dio
-board_build.filesystem = littlefs
+; board_build.filesystem = littlefs
 ; https://github.com/espressif/arduino-esp32/tree/master/tools/partitions
 ; board_build.partitions = no_ota.csv
 
