--- a/platformio.ini
+++ b/platformio.ini
@@ -69,7 +69,7 @@ lib_deps =
     M5Stack-SD-Updater
     https://github.com/tobozo/ESP32-targz
 
-extra_scripts = post:generate_user_custom.py
+; extra_scripts = post:generate_user_custom.py
 
 [esp32s3]
 board_build.mcu = esp32s3
