--- a/platformio.ini
+++ b/platformio.ini
@@ -58,6 +58,8 @@ custom_firmware_dir = firmware
 custom_firmware_version_file = ImageViewer.cpp
 build_src_filter =
     +<ImageViewer.*>
+    +<menu.*>
+    +<sdu.*>
     +<../examples/ImageViewer/main.cpp>
 build_flags =
     ${env.build_flags}
