--- a/platformio.ini
+++ b/platformio.ini
@@ -51,16 +51,16 @@ lib_deps =
     M5GFX@0.1.15
 
 [image-viewer]
-extends = m5unified, release
-custom_firmware_suffix = bin
-custom_firmware_name = image_viewer
-custom_firmware_dir = firmware
-custom_firmware_version_file = ImageViewer.cpp
-build_src_filter =
-    +<ImageViewer.*>
-    +<menu.*>
-    +<sdu.*>
-    +<../examples/ImageViewer/main.cpp>
+; extends = m5unified, release
+; custom_firmware_suffix = bin
+; custom_firmware_name = image_viewer
+; custom_firmware_dir = firmware
+; custom_firmware_version_file = ImageViewer.cpp
+; build_src_filter =
+;     +<ImageViewer.*>
+;     +<menu.*>
+;     +<sdu.*>
+;     +<../examples/ImageViewer/main.cpp>
 build_flags =
     ${env.build_flags}
     ${m5unified.build_flags}
